--- a/languages.html
+++ b/languages.html
@@ -68,7 +68,7 @@
                 
         <h3>Languages supported</h3>
         <p>
-        From version 2.1.0 onwards, LiClipse also supports TextMate bundles by adding a '.zip' file 
+        From version 2.1.0 onwards, LiClipse also supports TextMate bundles by adding a '.zip' file
         renamed to '.tmbundle' to a tracked folder, which means it can currently support
         a huge number of languages.
         </p>
@@ -78,8 +78,8 @@
         <p>Out of the box it provides support for:</p>
         <ul>
             <li>C/C++</li>
-            <li>CoffeScript</li>
             <li>CSS</li>
+            <li>CoffeScript</li>
             <li>Dart</li>
             <li>Django Templates</li>
             <li>Go <strong>(new on 2.0)</strong></li>
@@ -89,15 +89,19 @@
             <li>Jinja2 <strong>(new on 2.0)</strong></li>
             <li>Julia</li>
             <li>Kivy Language</li>
-            <li>Ruby <strong>(new on 2.1.0)</strong></li>
+            <li>Linux Shell files <strong>(new on 2.2.0)</strong></li>
             <li>Mako Templates</li>
             <li>Markdown <strong>(new on 2.1.0)</strong></li>
             <li>Nim <strong>(new on 2.0)</strong></li>
-            <li>Python</li>
+            <li>PERL <strong>(new on 2.2.0)</strong></li>
             <li>PHP <strong>(new on 2.1.0)</strong></li>
+            <li>Python</li>
             <li>RST (ReStructured Text)</li>
+            <li>Ruby <strong>(new on 2.1.0)</strong></li>
             <li>SCSS</li>
             <li>StringTemplate</li>
+            <li>Swift <strong>(new on 2.2.0)</strong></li>
+            <li>Windows bat files <strong>(new on 2.2.0)</strong></li>
             <li>XML</li>
             <li>YAML</li>
         </ul>
