Added search to the page.

--- a/scripts/index.html
+++ b/scripts/index.html
@@ -20,10 +20,10 @@
             <li>A simple way to add support for a new language</li>
             <li>Usability improvements for all Eclipse editors featuring:</li>
             <ul>
-            	<li>Multiple cursors</li>
+            	<li><a href="multi_edition_video.html">Multiple cursors</a></li>
             	<li>Vertical indent guides</li>
             	<li>Themed scrollbars</li>
-	            <li>Improved text search experience (with Lucene index-based searching, support for external folders, open editors and additional filtering on results page)</li>
+	            <li>Improved <a href="search.html">text search capabilities</a> (with Lucene index-based searching, support for external folders, open editors and additional filtering on results page)</li>
             </ul>
             <li>Native installers</li>
             <li>
@@ -35,7 +35,7 @@
 
         <h3>Release Highlights for LiClipse 2.2.0</h3>
         <ul>
-			<li>Improved text search</li>
+			<li>Improved <a href="search.html">searching capabilities</a></li>
 			<ul>
 				<li>Workspace searches based on Lucene indexes.</li>
 				<li>Provides a way to searche in external folders.</li>
