--- a/scripts/multi_edition_video.html
+++ b/scripts/multi_edition_video.html
@@ -20,12 +20,19 @@
             The video below shows improvements on the multi-edition and code-completion for the LiClipse HTML editor.
         </p>
         <p>
-            Multi-edition below is activated with <strong>Ctrl+K</strong> (forward search) or <strong>Ctrl+Shift+K</strong> (backward search).
+            Multi-edition below is activated with:
         </p>
-        <p>
-            Alternatively, one can use <strong>Ctrl + Alt + double-click</strong> a word to add it to the multi-edition
-            or <strong>Ctrl + Alt + Click</strong> with a selected region.
-        </p>
+        <ul>
+        	<li><strong>Ctrl+K</strong> (forward search) or <strong>Ctrl+Shift+K</strong> (backward search)</li>
+
+            <li>
+            <strong>Ctrl + Alt + double-click</strong> a word to add it to the multi-edition or <strong>Ctrl + Alt + Click</strong> to select the mouse-clicked position.
+            </li>
+
+            <li>
+            <strong>Ctrl + Alt + mouse drag</strong> can be used to select a region (if the selection starts and ends in the end of the line it will select only the line ends, otherwise it'll select the whole lines).
+            </li>
+        </ul>
         <p>
             A selected region can be unlinked with <strong>Shift + Alt + K</strong>
         </p>
