--- a/customize_html.html
+++ b/customize_html.html
@@ -44,6 +44,7 @@
                 
 <p><a href="change_color_theme.html">Changing colors</a></p>
 <p><a href="launch.html">Running/Launching</a></p>
+<p><a href="search.html">Improved Search</a></p>
 <p><a href="supported_languages.html">Language Support</a></p>
 <p><a href="scope_definition.html">&nbsp;&nbsp;&nbsp;&nbsp;Language Scopes</a></p>
 <p><a href="ctags.html">&nbsp;&nbsp;&nbsp;&nbsp;Ctags</a></p>
