--- a/scripts/index.html
+++ b/scripts/index.html
@@ -38,7 +38,7 @@
 			<li>Improved <a href="search.html">searching capabilities</a></li>
 			<ul>
 				<li>Workspace searches based on Lucene indexes.</li>
-				<li>Provides a way to searche in external folders.</li>
+				<li>Provides a way to search in external folders.</li>
 				<li>Provides a way to search open editors.</li>
 				<li>Results search page allows additional filtering based on paths.</li>
 			</ul>
