Updating homepage to the LiClipse 2.3.0 release.

--- a/scripts/history.html
+++ b/scripts/history.html
@@ -14,12 +14,28 @@
     <body>
     <h3>Releases history</h3>
 
+        <h3>Release Highlights for LiClipse 2.3.0</h3>
+        <ul>
+			<li>Improvements on the parsing structure, resulting in:</li>
+			<ul>
+				<li>Improved performance on syntax highlighting and outline creation.</li>
+				<li>Scopes from TextMate rules are properly kept
+					(so, code-completion now works for more TextMate languages).</li>
+			</ul>
+			<li>A new view which shows an <a href="preview.html">HTML preview</a> for the <strong>HTML</strong>,
+				<strong>Markdown</strong> and <strong>RST editors</strong>
+				(it can be activated in Window > Show View > Other > LiClipse > LiClipse HTML Preview, or
+				by using Ctrl+3 > LiClipse HTML Preview)</li>
+			<li>The new <a href="search.html">search</a> had some bugs ironed out.</li>
+        </ul>
+
+
         <h3>Release Highlights for LiClipse 2.2.0</h3>
         <ul>
-			<li>Improved text search</li>
+			<li>Improved <a href="search.html">searching capabilities</a></li>
 			<ul>
 				<li>Workspace searches based on Lucene indexes.</li>
-				<li>Provides a way to searche in external folders.</li>
+				<li>Provides a way to search in external folders.</li>
 				<li>Provides a way to search open editors.</li>
 				<li>Results search page allows additional filtering based on paths.</li>
 			</ul>
