--- a/scripts/index.html
+++ b/scripts/index.html
@@ -25,6 +25,7 @@
             	<li>Themed scrollbars</li>
 	            <li>Improved <a href="search.html">text search capabilities</a> (with Lucene index-based searching, support for external folders, open editors and additional filtering on results page)</li>
             </ul>
+            <li><a href="preview.html">HTML preview</a> for the RST, Markdown and HTML editors</li>
             <li>Native installers</li>
             <li>
                 Improved theming support based on Eclipse 4 improvements<br/>
@@ -33,23 +34,19 @@
             </li>
         </ul>
 
-        <h3>Release Highlights for LiClipse 2.2.0</h3>
+        <h3>Release Highlights for LiClipse 2.3.0</h3>
         <ul>
-			<li>Improved <a href="search.html">searching capabilities</a></li>
+			<li>Improvements on the parsing structure, resulting in:</li>
 			<ul>
-				<li>Workspace searches based on Lucene indexes.</li>
-				<li>Provides a way to search in external folders.</li>
-				<li>Provides a way to search open editors.</li>
-				<li>Results search page allows additional filtering based on paths.</li>
+				<li>Improved performance on syntax highlighting and outline creation.</li>
+				<li>Scopes from TextMate rules are properly kept
+					(so, code-completion now works for more TextMate languages).</li>
 			</ul>
-			<li>Linux Shell files supported.</li>
-			<li>Windows bat files supported.</li>
-			<li>PERL is now supported.</li>
-			<li>Swift is now supported.</li>
-			<li>New view to explore LiClipse languages.</li>
-			<li>New view which shows the partitions for the current file to help when creating a language.</li>
-			<li>Improved performance in partitioning.</li>
-			<li>GTK 2 is set as the the default backend in Linux</li>
+			<li>A new view which shows an <a href="preview.html">HTML preview</a> for the <strong>HTML</strong>,
+				<strong>Markdown</strong> and <strong>RST editors</strong>
+				(it can be activated in Window > Show View > Other > LiClipse > LiClipse HTML Preview, or
+				by using Ctrl+3 > LiClipse HTML Preview)</li>
+			<li>The new <a href="search.html">search</a> had some bugs ironed out.</li>
         </ul>
 
         <p><a href="history.html">View highlights for previous releases</a></p>
