Added academic institution license terms.

--- a/license.html
+++ b/license.html
@@ -111,7 +111,15 @@ Multi User License<br/>
 Multi User licenses may only be acquired by an organization and can only be used by employees of the organization to which the license was licensed.
 With a Multi User License you are granted a non-exclusive, nontransferable license to install the Software to any number of computers, but within a week the
 maximum number of different users using this license may not exceed the number of users available in the license. i.e. if you have a 2 user license, within a
-week only 2 different users may use the license.  This license does not expire but it can be used solely with the version of the software it was bought for.
+week only 2 different users may use the license. This license does not expire but it can be used solely with the version of the software it was bought for.
+<br/>
+<br/>
+Academic Institution License<br/>
+<br/>
+Academic Institution licenses may only be acquired to be used in classrooms for teaching institutions such as universities and schools.
+With an academic institution license, you are granted a non-exclusive, nontransferable license to install the Software to the number of computers specified
+in the license inside the academic institution for which it was bougth and it may be used by any student and teacher for teaching purposes. This license does not expire but it
+can be used solely with the version of the software it was bought for.
 <br/>
 <br/>
 <br/>
