Updated to version 2.4.0.

--- a/languages.html
+++ b/languages.html
@@ -96,6 +96,7 @@
             <li>PERL <strong>(new on 2.2.0)</strong></li>
             <li>PHP <strong>(new on 2.1.0)</strong></li>
             <li>Python</li>
+            <li>RAML (new on 2.4.0)</li>
             <li>RST (ReStructured Text)</li>
             <li>Ruby <strong>(new on 2.1.0)</strong></li>
             <li>SCSS</li>
