--- a/scripts/index.html
+++ b/scripts/index.html
@@ -34,6 +34,13 @@
             </li>
         </ul>
 
+        <h3>Release Highlights for LiClipse 2.4.0</h3>
+        <ul>
+        	<li>Fixed critical issue where indent rules were being applied without a new line on textmate bundles</li>
+        	<li>Added RAML editor support</li>
+        	<li>Updated PyDev and EGit</li>
+        </ul>
+
         <h3>Release Highlights for LiClipse 2.3.0</h3>
         <ul>
 			<li>Improvements on the parsing structure, resulting in:</li>
