--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
 
         <h3>Release Highlights for LiClipse 2.4.0</h3>
         <ul>
-        	<li>Fixed critical issue where indent rules were being applied without a new line</li>
+        	<li>Fixed critical issue where indent rules were being applied without a new line on textmate bundles</li>
         	<li>Added RAML editor support</li>
-        	<li>Updated PyDev and EGit</li>
+        	<li>Updated to PyDev 4.4.0</li>
         </ul>
 
         <h3>Release Highlights for LiClipse 2.3.0</h3>
