--- a/index.html
+++ b/index.html
@@ -88,6 +88,14 @@
             </li>
         </ul>
 
+        <h3>Release Highlights for LiClipse 2.5.1</h3>
+        <ul>
+        	<li>The comment prefix now works properly for TextMate based languages</li>
+        	<li>Fixed issue handling TextMate rule which affected the Ruby syntax highlighting</li>
+        	<li>Updated to PyDev 4.5.1</li>
+        	<li>Updated EGit</li>
+        </ul>
+
         <h3>Release Highlights for LiClipse 2.4.0</h3>
         <ul>
         	<li>Fixed critical issue where indent rules were being applied without a new line on textmate bundles</li>
