--- a/scripts/index.html
+++ b/scripts/index.html
@@ -34,6 +34,15 @@
             </li>
         </ul>
 
+        <h3>Release Highlights for LiClipse 2.5.2</h3>
+        <ul>
+        	<li>The trees and tables now have styled scrollbars when using the LiClipse theme (using <a href="http://fappel.github.io/xiliary/clean-sheet.html">Xiliary</a> scrollbar enhancements).</li>
+        	<li>CSS and SCSS languages use textmate bundles for highlighting</li>
+        	<li>Updated PyDev to 4.5.3 (fixes in debugger and improvements in the PyUnit view)</li>
+        	<li>Updated Eclipse to 4.5.1</li>
+        	<li>Updated Startexplorer to 1.7.0</li>
+        </ul>
+
         <h3>Release Highlights for LiClipse 2.5.1</h3>
         <ul>
         	<li>The comment prefix now works properly for TextMate based languages</li>
