--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
     View the Project on GitHub <small>brainwy/liclipse.page</small></a></p> -->
 <ul class="top1">
     <!-- <li><a href="http://???">Get It <strong>Download</strong></a></li> -->
-    <li><a href="https://groups.google.com/forum/#!forum/liclipse">Googlegroups <strong>Forum</strong></a></li>
+    <li><a href="contact.html">Get in <strong>Contact</strong></a></li>
     <li><a href="http://liclipse.blogspot.com.br/">View <strong>Blog</strong></a></li>
     <li><a href="https://sw-brainwy.rhcloud.com/tracker/LiClipse/">LiClipse<strong>Tracker</strong></a></li>
 </ul>
@@ -61,7 +61,7 @@
 
 
 
-<p><small>Copyright 2013-2015 - Brainwy Software Ltda.<br/>Hosted on GitHub Pages - Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+<p><small>Copyright 2013-2016 - Brainwy Software Ltda.<br/>Hosted on GitHub Pages - Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
 
             </header>
             <section>
@@ -69,10 +69,16 @@
     For bug reports or feature requests, please create an entry at the <a href="https://sw-brainwy.rhcloud.com/tracker/LiClipse/">LiClipse Tracker</a>.
     <br/>
     <br/>
-    For general support questions, please ask at the <a href="https://groups.google.com/forum/#!forum/liclipse">Googlegroups Forum</a>.
-    <br/>     
+    For general support questions, please ask at the <a href="http://stackoverflow.com/questions/tagged/liclipse">StackOverflow (with the LiClipse tag)</a>.
     <br/>
-    If you wish to discuss something else, please contact fabiofz (at) gmail (dot) com.     
+    <br/>
+    For contact on other LiClipse related information and keeping track on LiClipse releases, register in the <a href="https://groups.google.com/forum/#!forum/liclipse">Googlegroups Forum</a>.
+    <br/>
+    <br/>
+    View <a href="http://liclipse.blogspot.com.br/">LiClipse Blog</a> for info on its development.
+    <br/>
+    <br/>
+    If you wish to discuss something else, please contact fabiofz (at) gmail (dot) com.
     
                 <!-- <pre><code>$ cd your_repo_root/repo_name
                     $ git fetch origin
