--- a/scripts/contact.html
+++ b/scripts/contact.html
@@ -5,10 +5,16 @@
     For bug reports or feature requests, please create an entry at the <a href="https://sw-brainwy.rhcloud.com/tracker/LiClipse/">LiClipse Tracker</a>.
     <br/>
     <br/>
-    For general support questions, please ask at the <a href="https://groups.google.com/forum/#!forum/liclipse">Googlegroups Forum</a>.
-    <br/>     
+    For general support questions, please ask at the <a href="http://stackoverflow.com/questions/tagged/liclipse">StackOverflow (with the LiClipse tag)</a>.
     <br/>
-    If you wish to discuss something else, please contact fabiofz (at) gmail (dot) com.     
+    <br/>
+    For contact on other LiClipse related information and keeping track on LiClipse releases, register in the <a href="https://groups.google.com/forum/#!forum/liclipse">Googlegroups Forum</a>.
+    <br/>
+    <br/>
+    View <a href="http://liclipse.blogspot.com.br/">LiClipse Blog</a> for info on its development.
+    <br/>
+    <br/>
+    If you wish to discuss something else, please contact fabiofz (at) gmail (dot) com.
     </body>
 
 </html>
