--- a/license.html
+++ b/license.html
@@ -48,7 +48,7 @@
     View the Project on GitHub <small>brainwy/liclipse.page</small></a></p> -->
 <ul class="top1">
     <!-- <li><a href="http://???">Get It <strong>Download</strong></a></li> -->
-    <li><a href="https://groups.google.com/forum/#!forum/liclipse">Googlegroups <strong>Forum</strong></a></li>
+    <li><a href="contact.html">Get in <strong>Contact</strong></a></li>
     <li><a href="http://liclipse.blogspot.com.br/">View <strong>Blog</strong></a></li>
     <li><a href="https://sw-brainwy.rhcloud.com/tracker/LiClipse/">LiClipse<strong>Tracker</strong></a></li>
 </ul>
@@ -61,7 +61,7 @@
 
 
 
-<p><small>Copyright 2013-2015 - Brainwy Software Ltda.<br/>Hosted on GitHub Pages - Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+<p><small>Copyright 2013-2016 - Brainwy Software Ltda.<br/>Hosted on GitHub Pages - Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
 
             </header>
             <section>
@@ -180,7 +180,7 @@ ENTIRE AGREEMENT.<br/>
 You agree that this Agreement expresses the entire understanding between you and BRAINWY SOFTWARE LTDA-ME, and supersedes all other communications, oral or written,
 relating to the Software.<br/>
 <br/>
-COPYRIGHT 20013-2015 BRAINWY SOFTWARE LTDA-ME<br/>
+COPYRIGHT 20013-2016 BRAINWY SOFTWARE LTDA-ME<br/>
     
                 <!-- <pre><code>$ cd your_repo_root/repo_name
                     $ git fetch origin
