Updated homepage for release 2.5.3.

--- a/index.html
+++ b/index.html
@@ -88,6 +88,11 @@
             </li>
         </ul>
 
+        <h3>Release Highlights for LiClipse 2.5.3</h3>
+        <ul>
+        	<li>Updated PyDev to 4.5.4 (it had a critical fix in debugger)</li>
+        </ul>
+
         <h3>Release Highlights for LiClipse 2.5.2</h3>
         <ul>
         	<li>The trees and tables now have styled scrollbars when using the LiClipse theme (using <a href="http://fappel.github.io/xiliary/clean-sheet.html">Xiliary</a> scrollbar enhancements).</li>
