--- a/scripts/index.html
+++ b/scripts/index.html
@@ -34,6 +34,15 @@
             </li>
         </ul>
 
+        <h3>Release Highlights for LiClipse 2.5.4</h3>
+        <ul>
+        	<li>Updated PyDev to 4.5.5</li>
+        	<ul>
+        		<li>Improvements in code-completion, pytest integration, python 3 parsing, debugger and django tests running</li>
+        	</ul>
+        	<li>Accepting hyphen for tags/attributes in XML editor</li>
+        	<li>Themed ScrollBar disabled by default for Trees/Tables (can be manually enabled at General > Appearance > Color Theme)</li>
+        </ul>
         <h3>Release Highlights for LiClipse 2.5.3</h3>
         <ul>
         	<li>Updated PyDev to 4.5.4 (it had a critical fix in debugger)</li>
