--- a/scripts/index.html
+++ b/scripts/index.html
@@ -39,9 +39,9 @@
         	<li>Based on <strong>Eclipse 4.6 M7</strong></li>
         	<li>Requires <strong>Java 8</strong> to run</li>
         	<li>Fixed scrollbar issue on Git Staging view</li>
-        	<li>JavaScript editor using Nashorn instead of Rhino for JSLint and Beautify.js</li>
+        	<li>JavaScript editor using Nashorn instead of Rhino for JSHint and Beautify.js</li>
         	<ul>
-        		<li>Note that JSLint doesn't officially support Nashorn, so, a patched version is needed.</li>
+        		<li>Note that JSHint doesn't officially support Nashorn, so, a patched version is needed.</li>
         		<li>Nashorn is <strong>much</strong> faster than Rhino, so, opening a big file to be linted should no longer halt the IDE.</li>
         	</ul>
         	<li>Removed scrollbar theming from trees and tables due to some bugs (users that want can still enable it
