--- a/ctags.html
+++ b/ctags.html
@@ -27,7 +27,7 @@
         <!-- end tracking -->
 
         <div>
-            <div class="top_header_outer" style="top: 0px; left: 0px; width:100%; background-color:white; border-bottom: 1px solid black;">
+            <div class="top_header_outer" style="top: 0px; left: 0px; width:100%%; background-color:white; border-bottom: 1px solid black;">
             	<div class="top_header">
 	                <a href="index.html">Main</a>
 	                <a href="faq.html" style="padding-left:1.5em;">FAQ</a>
@@ -41,67 +41,10 @@
         </div>
         <div class="wrapper">
             <header>
-                
-<p><a href="change_color_theme.html">Changing colors</a></p>
-<p><a href="launch.html">Running/Launching</a></p>
-<p><a href="search.html">Improved Search</a></p>
-<p><a href="supported_languages.html">Language Support</a></p>
-<p><a href="scope_definition.html">&nbsp;&nbsp;&nbsp;&nbsp;Language Scopes</a></p>
-<p><a href="ctags.html">&nbsp;&nbsp;&nbsp;&nbsp;Ctags</a></p>
-<p><a href="indent.html">&nbsp;&nbsp;&nbsp;&nbsp;Specifying indentation</a></p>
-<p><a href="templates.html">&nbsp;&nbsp;&nbsp;&nbsp;Templates</a></p>
-<p><a href="spell_checking.html">&nbsp;&nbsp;&nbsp;&nbsp;Spell Checking</a></p>
-<p><a href="customize_javascript.html">JavaScript editor customization</a></p>
-<p><a href="customize_html.html">HTML editor customization</a></p>
-<p><a href="customize_yaml.html">YAML editor customization</a></p>
-<p><a href="textmate_bundles.html">TextMate Bundles integration</a></p>
-<p><a href="preview.html">HTML Preview</a></p><br><br><br>
-<p><small>Copyright 2013-2016 - Brainwy Software Ltda.<br/>Hosted on GitHub Pages - Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-
+                %(header)s
             </header>
             <section>
-                
-<h1>CTAGS</h1>
-It's possible to use CTAGS (<a href="http://ctags.sourceforge.net/">http://ctags.sourceforge.net/</a>) to 
-provide the outline and navigation (Ctrl+Shift+Up / Ctrl+Shift+Down). 
-<br/>
-<br/>
-
-A notable editor that uses it is the C/C++ editor, but it should be usable for any language which is supported by CTAGS 
-(although it's only recommended to use it if providing rules to parse the language is too difficult).
-<br/>
-<br/>
-
-To use CTAGS as the parser for the outline, the language should define:
-<br/>
-<br/>
-<strong>
-outline:<br/>
-  - {type: Ctags}<br/>
-</strong>
-<br/>
-And the indent type is used to complement the parent-child relations (as we only extract the text regions
-from CTAGS, so, the actual indentation is based on braces, spacing, etc.).
-<br/><br/>
-I.e.: 
-<br/><br/>
-<strong>
-indent: {<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;type: braces, #A new scope is defined by opening/closing braces<br/> 
-&nbsp;&nbsp;&nbsp;&nbsp;scope: default, #Only braces found in the default scope are considered<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;outline_scopes: [class, method], #We only create a scope where the outline defines a class or method.<br/>
-} <br/>
-</strong>
-<br/><br/>
-A ctags.exe is distributed by default on Windows and is located at 
-<strong>com.brainwy.liclipse.editor/libs/ctags.exe</strong>. For other platforms, the ctags
-executable must be already in your PATH (if you install it later, you may have to restart your shell/Eclipse so
-that it can detect the changes in your PATH).
-<br/><br/>
-The minimum version for it is ctags-5.8.
-
-
-
+                %(body)s
                 <!-- <pre><code>$ cd your_repo_root/repo_name
                     $ git fetch origin
                     $ git checkout gh-pages
