--- a/text/about.html
+++ b/text/about.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <meta name="description" content="LiClipseText" />
 <meta name="keywords" content="liclipse, eclipse, liclipsetext, textmate, sublime text" />
-<title>LiClipseText</title>
+<title>About</title>
 
 <!-- stylesheet -->
 <link href="stylesheet.css" rel="stylesheet" type="text/css" />
@@ -230,57 +230,57 @@
 
 		<td class="td_right2" align="left" colspan="2">
 			
-        <h1>What is LiClipseText?</h1>
+        <h1>About</h1>
         <p>
-            LiClipseText is an editor which enables Eclipse to be used as a general-purpose text editor,
-            providing support for multiple languages out of the box.
-        </p>
-
-        <p>
-        	It's the Open Source (EPL-based) counterpart of <a href="http://www.liclipse.com/">LiClipse</a>.
+            LiClipseText was extracted from <a href="http://www.liclipse.com/">LiClipse</a> to provide a lighteight, Open Source (EPL-based),
+            Eclipse editor targeting multiple languages.
         </p>
         <p>
-            It comes with goodies such as:
+            It was created by Fabio Zadrozny.
         </p>
-        <ul>
-        	<li>Syntax Highlighting (LiClipse, TextMate or SublimeText based).</li>
-        	<li>Code completion.</li>
-        	<li>Outline view and Quick Outline.</li>
-        	<li>Text-based mark occurrences.</li>
-        	<li>LiClipse Languages view:</li>
-        	<ul>
-        		<li>Enables exploring installed languages.</li>
-        	</ul>
-        	<li>LiClipse Partitions view:</li>
-        	<ul>
-        		<li>Enables inspecting the partitioning of the editor.</li>
-        		<li>Useful to debug how LiClipseText is parsing a language.</li>
-        	</ul>
-        	<li>Use LiClipseText as a base for other editors:</li>
-        	<ul>
-        		<li>Languages may be created and experimented with on-the-fly, without restarting Eclipse.</li>
-        	</ul>
-        </ul>
-		<h1>LiClipse</h1>
-		<p>The recommended way of using LiClipseText is bundled in <a href="http://www.liclipse.com/">LiClipse</a>,
-		which bundles LiClipseText in an easy to use package with extended features (also, by licensing
-		LiClipse you directly support the development of LiClipseText).</p>
-    	<br/>
-    	<br/>
-    	<br/>
-    	<br/>
-    	<br/>
-    	<br/>
-    	<br/>
-    	<br/>
-    	<br/>
-    	<br/>
-    	<br/>
-    	<br/>
-    	<br/>
-    	<br/>
-    	<br/>
-
+        <h1>Why?</h1>
+        <p>
+            First, I'm a big supporter of Open Source software. Besides LiClipseText, <a href="http://pydev.org">PyDev</a> is also another
+            software which I maintain and extracting LiClipseText from <a href="http://www.liclipse.com/">LiClipse</a> and providing it
+            as Open Source is something which I wanted to do for quite some time already.
+        </p>
+        <p>
+            Sure, there's a risk that by making it Open Source users will stop supporting its development and just getting it "for free"...
+            Personally, I hope this won't happen and expect that LiClipseText users that can will still upgrade to its
+            commercial counterpart (<a href="http://www.liclipse.com/">LiClipse</a>) to keep
+            its development possible (or will support it through donations).
+        </p>
+        <h1>What's the difference between LiClipseText and LiClipse?</h1>
+    	<p>LiClipseText provides the support for multiple languages as an Eclipse editor.</p>
+    	<p><a href="http://www.liclipse.com/">LiClipse</a> is its commercial counterpart, which provides enhancements such as:</p>
+    	<ul>
+    		<li>Bundling of LiClipseText (along with PyDev, EGit, ColorTheme, AnyEdit and StartExplorer) as a standalone with native installers.</li>
+    		<li>Enhancements to the theming (allowing theming of the IDE along with the editor and a nice dark theme).</li>
+    		<li>Multiple cursors.</li>
+    		<li>Linting for JavaScript, XML and HTML editors.</li>
+    		<li>Code formatting for HTML, XML.</li>
+    		<li>Vertical Indent Guides.</li>
+    		<li>Improved text search capabilities (with Lucene index-based searching, support for external folders, open editors and additional filtering on results page).</li>
+    		<li>HTML preview for the RST, Markdown and HTML editors.</li>
+    		<li>Debugging of Django Templates in PyDev.</li>
+    		<li>Launching of files opened with LiClipseText.s</li>
+    	</ul>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
     
 			<br>
 			<br>
