--- a/manual.html
+++ b/manual.html
@@ -41,10 +41,28 @@
         </div>
         <div class="wrapper">
             <header>
-                %(header)s
+                
+<p><a href="change_color_theme.html">Changing colors</a></p>
+<p><a href="launch.html">Running/Launching</a></p>
+<p><a href="search.html">Improved Search</a></p>
+<p><a href="supported_languages.html">Language Support</a></p>
+<p><a href="scope_definition.html">&nbsp;&nbsp;&nbsp;&nbsp;Language Scopes</a></p>
+<p><a href="ctags.html">&nbsp;&nbsp;&nbsp;&nbsp;Ctags</a></p>
+<p><a href="indent.html">&nbsp;&nbsp;&nbsp;&nbsp;Specifying indentation</a></p>
+<p><a href="templates.html">&nbsp;&nbsp;&nbsp;&nbsp;Templates</a></p>
+<p><a href="spell_checking.html">&nbsp;&nbsp;&nbsp;&nbsp;Spell Checking</a></p>
+<p><a href="customize_javascript.html">JavaScript editor customization</a></p>
+<p><a href="customize_html.html">HTML editor customization</a></p>
+<p><a href="customize_yaml.html">YAML editor customization</a></p>
+<p><a href="textmate_bundles.html">TextMate Bundles integration</a></p>
+<p><a href="preview.html">HTML Preview</a></p><br><br><br>
+<p><small>Copyright 2013-2016 - Brainwy Software Ltda.<br/>Hosted on GitHub Pages - Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+
             </header>
             <section>
-                %(body)s
+                
+<h3>Choose the topic you're interested in...</h3>
+
                 <!-- <pre><code>$ cd your_repo_root/repo_name
                     $ git fetch origin
                     $ git checkout gh-pages
