--- a/text/download.html
+++ b/text/download.html
@@ -247,7 +247,7 @@
         <div class="section" id="liclipsetext-does-not-appear-after-install">
             <h1>LiClipseText does not appear after install!</h1>
             <p>Well, the main issue at this time is that LiClipseText requires Java 8 in order to run. So, if you don't want to support LiClipseText by
-                going the LiClipse route (which is mostly a LiClipseText standalone plus some goodies), you may have to go through some loops to
+                going the LiClipse route (which has LiClipseText plus other goodies), you may have to go through some loops to
                 make sure that you're actually using Java 8 to run Eclipse/LiClipseText (as explained below).
             </p>
             <div class="section" id="all-oses">
