--- a/faq.html
+++ b/faq.html
@@ -19,15 +19,15 @@
           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
           m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
           })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-        
+
           ga('create', 'UA-153541-6', 'auto');
           ga('send', 'pageview');
-        
+
         </script>
         <!-- end tracking -->
 
         <div>
-            <div class="top_header_outer" style="top: 0px; left: 0px; width:100%%; background-color:white; border-bottom: 1px solid black;">
+            <div class="top_header_outer" style="top: 0px; left: 0px; width:100%; background-color:white; border-bottom: 1px solid black;">
             	<div class="top_header">
 	                <a href="index.html">Main</a>
 	                <a href="faq.html" style="padding-left:1.5em;">FAQ</a>
