Updated page with details on LiClipseText.

--- a/index.html
+++ b/index.html
@@ -88,6 +88,14 @@
             </li>
         </ul>
 
+        <h3>Release Highlights for LiClipse 3.0.3</h3>
+        <ul>
+        	<li>Based on <strong>Eclipse 4.6 RC1</strong></li>
+        	<li>Updated EGit (fixed a critical issue in the Git Staging View).</li>
+        	<li>The LiClipse editor component (<a href="http://www.liclipse.com/text">LiClipseText</a>) is now open source (
+        		view <a href="http://www.liclipse.com/text">http://www.liclipse.com/text</a> for more information).</li>
+        </ul>
+
         <h3>Release Highlights for LiClipse 3.0.1</h3>
         <ul>
         	<li>Based on <strong>Eclipse 4.6 M7</strong></li>
