--- a/manual.html
+++ b/manual.html
@@ -45,16 +45,9 @@
 <p><a href="change_color_theme.html">Changing colors</a></p>
 <p><a href="launch.html">Running/Launching</a></p>
 <p><a href="search.html">Improved Search</a></p>
-<p><a href="supported_languages.html">Language Support</a></p>
-<p><a href="scope_definition.html">&nbsp;&nbsp;&nbsp;&nbsp;Language Scopes</a></p>
-<p><a href="ctags.html">&nbsp;&nbsp;&nbsp;&nbsp;Ctags</a></p>
-<p><a href="indent.html">&nbsp;&nbsp;&nbsp;&nbsp;Specifying indentation</a></p>
-<p><a href="templates.html">&nbsp;&nbsp;&nbsp;&nbsp;Templates</a></p>
-<p><a href="spell_checking.html">&nbsp;&nbsp;&nbsp;&nbsp;Spell Checking</a></p>
 <p><a href="customize_javascript.html">JavaScript editor customization</a></p>
 <p><a href="customize_html.html">HTML editor customization</a></p>
 <p><a href="customize_yaml.html">YAML editor customization</a></p>
-<p><a href="textmate_bundles.html">TextMate Bundles integration</a></p>
 <p><a href="preview.html">HTML Preview</a></p><br><br><br>
 <p><small>Copyright 2013-2016 - Brainwy Software Ltda.<br/>Hosted on GitHub Pages - Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
 
@@ -62,6 +55,8 @@
             <section>
                 
 <h3>Choose the topic you're interested in...</h3>
+Note: for the manual on the Open Source <a href="text/index.html">LiClipseText</a> component (which provides syntax highlighting and languages customization), visit the
+<a href="text/manual.html">LiClipseText Manual</a>
 
                 <!-- <pre><code>$ cd your_repo_root/repo_name
                     $ git fetch origin
