--- a/scripts/faq.html
+++ b/scripts/faq.html
@@ -23,6 +23,11 @@
 
         <p>LiClipse is a short for Lightweight Eclipse.</p>
 
+        <h3>What about LiClipseText?</h3>
+        
+        <p>LiClipseText is the open source component that was born out of LiClipse which provides support for multiple languages.</p>
+        <p>See the <a href="text/about.html">LiClipseText About</a> for more information.</p> 
+        
         <h3>Is it a fork of Eclipse?</h3>
 
         <p>No, LiClipse is not a fork of Eclipse (nor does it intend to be). Also, it should work well with
