--- a/text/manual.html
+++ b/text/manual.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <meta name="description" content="LiClipseText" />
 <meta name="keywords" content="liclipse, eclipse, liclipsetext, textmate, sublime text" />
-<title>Manual</title>
+<title>Download</title>
 
 <!-- stylesheet -->
 <link href="stylesheet.css" rel="stylesheet" type="text/css" />
@@ -227,8 +227,21 @@
 
 		<td class="td_right2" align="left" colspan="2">
 			
-    	Manual (to be added soon...)
-    
+<h1>Manual</h1>
+<br/>
+Choose the topic you're interested in...<br/>
+<br/>
+<ul>
+<p><a href="supported_languages.html">Language Support</a></p>
+<p><a href="scope_definition.html">Language Scopes</a></p>
+<p><a href="ctags.html">Ctags</a></p>
+<p><a href="indent.html">Specifying indentation</a></p>
+<p><a href="templates.html">Templates</a></p>
+<p><a href="spell_checking.html">Spell Checking</a></p>
+<p><a href="textmate_bundles.html">TextMate Bundles integration</a></p>
+</ul>
+<br><br><br>
+<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
 			<br>
 			<br>
 		</td>
