--- a/scripts/text/about.html
+++ b/scripts/text/about.html
@@ -35,7 +35,7 @@
     		<li>Improved text search capabilities (with Lucene index-based searching, support for external folders, open editors and additional filtering on results page).</li>
     		<li>HTML preview for the RST, Markdown and HTML editors.</li>
     		<li>Debugging of Django Templates in PyDev.</li>
-    		<li>Launching of files opened with LiClipseText.s</li>
+    		<li>Launching of files opened with LiClipseText.</li>
     	</ul>
         <br>
         <br>
