--- a/text/developers.html
+++ b/text/developers.html
@@ -193,7 +193,7 @@
 				<br/>
 				<br/>
 			<br/>
-			<a href="http://marketplace.eclipse.org/node/114" title="Favorite at Eclipse Marketplace"><img src="../images/marketplace.png" alt="Favorite at Eclipse Marketplace"/></a>
+			<a href="http://marketplace.eclipse.org/content/liclipsetext" title="Favorite at Eclipse Marketplace"><img src="../images/marketplace.png" alt="Favorite at Eclipse Marketplace"/></a>
 
 			<br/>
             
